fixing text alignment on bg4

--- a/style.css
+++ b/style.css
@@ -226,6 +226,14 @@ body {
   height: 1000px;
 }
 
+div.container-fluid.bg-3 {
+  padding: 0;
+}
+
+img p3 {
+  height: 20%;
+}
+
 .bg-4 {
   background-color: #ff736b;
   color: #ffffff;
@@ -273,6 +281,8 @@ body {
   font-family: 'Raleway', sans-serif;
     color: white;
   text-decoration: none;
+  /*get rid of later*/
+  text-indent: -690px;
 }
 
 .bg4text {
@@ -389,6 +399,10 @@ padding-left: 175px;
 
 .pfour:hover .overlay4 {
   opacity: 1;
+}
+.pfour {
+  top: -350px;
+  /*margin-top: -150px;*/
 }
 
 .o-text {
